See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.87.00

19.03.30 BJH  Release 10.86.00

              Add pamfind.

              Add pambrighten.

              Add pamhue.

              pnmcrop: Add -bg-color, bg-corner, -reportfull, -reportsize,
              -blank-image .

              pamtopng: Add -interlace .

              pamenlarge: Add -scale, -xscale, -yscale .

              pamenlarge: Much faster for PBM with xscale factor above 10;
              slightly faster for xscale factor 2-10.

              pamfile: Add -machine and -size .

              pamscale: Add -reportonly

              pamstretch-gen: Add -quiet, -plain.

              pamstretch-gen: Use -dropedge on the 'pamstretch' piece for
              better looking output.

              pamstretch: Accept scale factor of 1 as a parameter (already
              was accepted with -xscale and -yscale options).

              pamstretch: Don't mess with edge when scale factor is 1,
              regardless of -dropedge and -blackedge.

              ppmwheel: Add -huevalue, -huesaturation, -maxval .

              various: Fix unnormalizing code so a value exactly between two
              sample values rounds consistently up.  Affects many programs.

              pstopnm: Fix bug: -textalphabits has no effect.  Always broken.
              (-textalphabits was new in Netpbm 10.53 (December 2010)).

              pamtopng: Fix sBit chunk, bit shift value for 1-, 2-, and 4-bit-
              per-sample images.  Always broken (Pamtopng was new in Netpbm
              10.71 (June 2015)).

              pamtopng: Fix buffer overrun.  Always broken (Pamtopng was new
              in Netpbm 10.71 (June 2015)).

              pnmtopng: fix bug: -interlace ignored.  Broken in 10.55
              (June 2011).

              pamstretch: Reject very large scale factors instead of producing