@@ -6,6 +6,10 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.87.00
 
+              pnmcrop: fix bug: incorrect identification of background with
+              -bgcolor and PBM or PGM image.  Always present (-bgcolor was
+              introduced in Netpbm 10.86 (March 2019).
+
 19.03.30 BJH  Release 10.86.00
 
               Add pamfind.
